[project]
name = "xml_to_parquet"
version = "0.1.dev0" 
description = "XML to Parquet Converter" 
readme = "README.md" # Optional
requires-python = ">=3.8"
license = {file = "LICENSE"}

[project.urls]
"Homepage" = "https://github.com/avm19/xml_to_parquet"
"Forked from" = "https://github.com/blackrock/xml_to_parquet"

[tool.setuptools]
# If there are data files included in your packages that need to be
# installed, specify them here.
package-data = {"sample" = ["*.dat"]}

[build-system]
# These are the assumed default build requirements from pip:
# https://pip.pypa.io/en/stable/reference/pip/#pep-517-and-518-support
# requires = ["setuptools>=43.0.0", "wheel"]
requires = ["setuptools>=61.0",]
build-backend = "setuptools.build_meta"



